<resources>
    <string name="app_name">PetWorq</string>
    <string name="facebook_app_id">167343297416735</string>
    <string name="fb_login_protocol_scheme">fb167343297416735</string>
    <string name="sign_in">Sign In</string>

    <string name="insert_handle_text">Insert the handle you would like:</string>
    <string name="submit">Submit</string>
    <string name="need_to_submit_handle">You still need to set up your handle.</string>
    <string name="successfully_signed_in">You have successfully signed in.</string>
    <string name="name_already_taken">That name was already taken.</string>

    <!-- Toolbar Titles -->
    <string name="settings_title">Settings</string>
    <string name="messages_title">Messages</string>
    <string name="tasks_title">Tasks</string>
    <string name="friends_title">Friends</string>
    <string name="add_friends_title">Add Friends</string>
    <string name="base_options_tite">Welcome Back!</string>
    <string name="pending_request_title">Pending friend requests</string>
    <string name="create_new_group_toolbar_title">Create new group</string>
    <string name="manage_existing_group_toolbar_title">Manage existing groups</string>
    <string name="pending_group_invitations_toolbar_title">Pending group invitations</string>

    <!-- Menu Items -->
    <string name="sign_out">Sign out</string>
    <string name="favorite">Favorite</string>
    <string name="friends">Friends</string>
    <string name="add_friends_menuitem">Find your friends</string>
    <string name="settings">Settings</string>
    <string name="create_new_group_menu_title">Create new group</string>
    <string name="manage_existing_groups_menu_title">Manage existing group</string>
    <string name="messages">Messages</string>
    <string name="pending_friends">Pending friend requests</string>
    <string name="pending_group_invitations_menu_title">Pending group invitations</string>

    <!-- Greeting -->
    <string name="greeting_message_to_not_signed_in">welcome to petworq!</string>
    <string name="sign_in_message">you will have to sign in to continue.</string>
    <string name="you_signed_in">You signed in!</string>

    <!-- Friends page -->
    <string name="friends_searchbar_current">Current</string>
    <string name="friends_searchbar_search">Search</string>

    <!-- Add Friends -->
    <string name="search_friends_edittext_hint">Enter your friend\'s handle</string>
    <string name="no_users_found_string">No users were found.</string>
    <string name="that_is_your_handle">That is your user handle.</string>
    <string name="send_friend_request">Send Friend Request</string>
    <string name="pending_request_already_exists">This user already has a pending request from you.</string>
    <string name="already_friend">This user is already your friend.</string>

    <!-- Pending Friends -->
    <string name="confirm_friend">Confirm</string>
    <string name="deny_friend">Deny</string>


    <!-- Create New Groups page -->
    <string name="create_new_group">Create a new group</string>
    <string name="enter_group_name">Enter your group name</string>

    <!-- Manage groups page -->
    <string name="manage_groups">manage</string>
    <string name="invite_friend">Invite Friend</string>
    <string name="insert_friends_name">Insert your friend\'s handle</string>
    <string name="make_default">Make Default</string>
    <string name="add_pet">Add Pet</string>
    <string name="create_schedule">Create Recurring Task</string>

    <!-- Pending Group invitations -->


    <!-- Add pet activity -->
    <string name="add_pet_activity_title">Create your Pet Profile</string>
    <string name="pet_name_field">Name</string>
    <string name="pet_species">Species</string>
    <string name="pet_description">Description</string>
    <string name="create_pet_profile">Create Pet Profile</string>

    <!-- Create new schedule -->
    <string name="time">Time</string>
    <string name="action">Action</string>

    <!-- Tasks -->
    <string name="completed_by">Completed by: </string>

    <!-- Go back buttons -->
    <string name="go_back">Go back</string>
</resources>
