<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/tasks_icon"
        android:icon="@drawable/ic_format_list_bulleted_black_24dp"
        android:title="Tasks"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/notifications_icon"
        android:icon="@drawable/ic_priority_high_black_24dp"
        android:title="Notifications"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/manage_existing_group_menuitem"
        android:title="@string/manage_existing_groups_menu_title"
        />
    <item
        android:id="@+id/pending_group_invitations_menuitem"
        android:title="@string/pending_group_invitations_menu_title"
        />
    <item
        android:id="@+id/create_new_group_menuitem"
        android:title="@string/create_new_group_menu_title"
        />
    <item
        android:id="@+id/messages_menuitem"
        android:title="@string/messages"
        />

    <item
        android:id="@+id/friends_menuitem"
        android:title="@string/friends"
        />
    <item
        android:id="@+id/add_friends_menuitem"
        android:title="@string/add_friends_menuitem"
        />
    <item
        android:id="@+id/pending_friends_menuitem"
        android:title="@string/pending_friends"
        />
    <item
        android:id="@+id/settings_menuitem"
        android:title="@string/settings"
        />
    <item
        android:id="@+id/sign_out_menuitem"
        android:title="@string/sign_out"
        />
</menu>