<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.petworq.androidapp.features.groups.create_new_group.CreateNewGroupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/go_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go_back" />


        <EditText
            android:id="@+id/group_name_edittext"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:hint="@string/enter_group_name"
            />


        <Button
            android:id="@+id/submit_group_name_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="@string/submit" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
